# marketing_mini_project

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  docker-compose.prod.yml  dockerfile  env.example  gitmessage.txt  pyproject.toml
.github/workflows/: build.yml  cd.yml  checks.yml  deploy.yml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_account_account_number_account_account_type_and_more.py
apps/analysis/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_alter_analysis_result_image_alter_analysis_user.py  0003_analysis_result_json_alter_analysis_result_image_and_more.py
apps/common/: constants.py
apps/transactions/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_transaction_user.py
apps/transactions/tests/: base.py  test_serializers.py  test_services.py  test_views.py
apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_password.py  0004_alter_user_managers.py  serializer.py
apps/users/tests/: test_serializers.py  test_services.py  test_views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: authentication.py  base.py  dev.py  prod.py
scripts/: run.sh  run_beat.sh  run_worker.sh
