[project]
name = "djangoproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "drf-spectacular>=0.29.0",
    "ruff>=0.15.9",
]
prod = [
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

